# MC_simulation

mother_control/: CMakeLists.txt  package.xml
mother_control/src/: mother_hover.cpp
mother_off/: CMakeLists.txt  package.xml
mother_off/launch/: mother.launch
mother_off/src/: mother_ctrl.cpp  offboard_ctrl.cpp
onboard_uav/: readme.md
onboard_uav/src/offboard/: CMakeLists.txt  package.xml
onboard_uav/src/offboard/src/: offboard_node.cpp  offboard_node_z.cpp
onboard_uav/src/px4ctrl/: CMakeLists.txt
onboard_uav/src/px4ctrl/config/: ctrl_param_fpv.yaml
onboard_uav/src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  input.cpp  px4ctrl_node.cpp
onboard_uav/src/relative_pose/: CMakeLists.txt  package.xml
onboard_uav/src/relative_pose/src/: iterate_relative.cpp
onboard_uav/src/uav_launch/: CMakeLists.txt  package.xml
onboard_uav/src/uav_launch/config/: uav_vis.rviz  usb_cam.yaml  usb_camera_calibration.yaml
onboard_uav/src/uav_launch/launch/: mavros_px4.launch  multi_uav_mavros_sitl.launch  new.launch  onboard_uav_fsm.launch  uav_landing_pose.launch
onboard_uav/src/uav_launch/worlds/: uav_apriltag.world
onboard_uav/src/uav_utils/: CMakeLists.txt  package.xml
onboard_uav/src/uav_utils/config/: onboard_msg.yaml
onboard_uav/src/uav_utils/launch/: apriltag_test.launch  uav0_pose.launch  usb_cam_test.launch
onboard_uav/src/uav_utils/src/: apriltag_pose_ctrl.cpp  gazebo_true.cpp  (+5 more)
onboard_uav/src/vision_pose/: CMakeLists.txt  package.xml
recorder/: CMakeLists.txt  package.xml
recorder/scripts/: record_pose2csv.py
(+58 files in other folders)
